--- a/css/master.css
+++ b/css/master.css
@@ -8,19 +8,66 @@ body {
   max-width: 100%;
 }
 
+form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
 main {
   background-color: #f5f5f5;
   border-radius: 1%;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   max-width: 768px;
-  height: 700px;
   padding: 20px;
   width: calc(100% - 40px);
 }
 
-#description {text-align: center;}
+main p, #title {
+  text-align: center;
+}
+
+form div, main p, #title, .multiple-options, .multiple-options div, .single-option input, .single-option label, .single-option textarea, .single-option select {
+  width: 100%;
+}
+
+.multiple-options, form div {
+  margin-top: 30px;
+}
+
+.multiple-options div, main p {
+  margin: 0;
+}
+
+.buttons, .single-option input, .single-option textarea {
+  margin-top: 10px;
+}
+
+.buttons label{
+  display: block;
+  margin-top: 5px;
+}
+
+.single-option textarea {
+  height: 75px;
+}
+
+#submit {
+  background-color: #0079B2;
+  border: none;
+  border: 1px solid #0079B2;
+  border-radius: 3px;
+  color: white;
+  margin: 30px 0;
+  padding: 15px;
+  text-transform: uppercase;
+  width: 100px;
+}
 
 #title {
-  text-align: center;
+  margin: 15px 0;
+}
+
+@media screen and (min-width: 700px) {
+
 }
