--- a/css/master.css
+++ b/css/master.css
@@ -17,7 +17,8 @@ form {
 
 main {
   background-color: #f5f5f5;
-  border-radius: 1%;
+  border-radius: 11px;
+  box-shadow: 0px 4px 8px 1px #A35A00;
   margin: 0 auto 20px;
   max-width: 768px;
   padding: 20px;
@@ -25,17 +26,18 @@ main {
 }
 
 main p, #title {
-  margin: 0;
   text-align: center;
 }
 
 textarea {
   height: 100px;
   width: 100%;
+  padding-left: 5px;
 }
 
 [type="text"], [type="number"], [type="email"], select {
   height: 30px;
+  padding-left: 5px;
 }
 
 .bold {
@@ -52,7 +54,7 @@ textarea {
 }
 
 #first-form-element, .input, .radio-check-input {
-  margin-top: 25px;
+  margin-top: 30px;
 }
 
 .input, .input label, .input input, .input select, .radio-check-input, .radio-check-input > div {
@@ -70,7 +72,7 @@ textarea {
   border: 1px solid #0079B2;
   border-radius: 3px;
   color: white;
-  margin: 30px 0;
+  margin: 50px 0 20px;
   padding: 15px;
   text-transform: uppercase;
   width: 100px;
