--- a/css/master.css
+++ b/css/master.css
@@ -19,10 +19,10 @@ main {
   background-color: #f5f5f5;
   border-radius: 11px;
   box-shadow: 0px 4px 8px 1px #A35A00;
-  margin: 0 auto 20px;
+  margin: 0 auto 5px;
   max-width: 768px;
   padding: 20px;
-  width: calc(100% - 40px);
+  width: calc(100% - 10px);
 }
 
 main p, #title {
@@ -83,6 +83,13 @@ textarea {
   font-weight: 600;
 }
 
+@media screen and (min-width: 374px) {
+    main {
+      margin-bottom: 20px;
+      width: calc(100% - 40px);
+    }
+}
+
 @media screen and (min-width: 500px) {
 
   .experience .buttons {
@@ -117,5 +124,35 @@ textarea {
 
   .experience div {
     justify-content: flex-start;
+  }
+}
+
+@media screen and (min-width: 823px) {
+  main {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 844px) {
+  main {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 863px) {
+  main {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 863px) {
+  main {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 883px) {
+  main {
+    margin-bottom: 50px;
   }
 }
